--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.9.0",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.4",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.7",
     "request": "^2.88.2"
